# waydroid-helper

./: .gitignore  KEY_MAPPING.md  KEY_MAPPING_zh.md  Makefile  README.md  README_zh.md  TODO  com.jaoushingan.WaydroidHelper.json  log.txt  meson.build  meson_options.txt  messages.mo  pyrightconfig.json  requirements.txt  service.py  waydroid-helper.py  waydroid-helper.spec
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: obs.yml  release.yml
appimage/: .env.sample  build.py  build.sh  build.spec
data/: com.jaoushingan.WaydroidHelper.desktop.in  com.jaoushingan.WaydroidHelper.gresource.xml  com.jaoushingan.WaydroidHelper.gschema.xml  com.jaoushingan.WaydroidHelper.metainfo.xml.in  com.jaoushingan.WaydroidHelper.policy.in  devices.json  meson.build  scripton.sh
data/icons/: meson.build
data/ui/: GeneralPage.ui  InfoBar.ui  PropsPage.ui  window.ui  window_old.ui
dbus/: com.waydroid.Helper.conf  com.waydroid.Helper.policy  com.waydroid.Helper.service  id.waydro.Mount.conf  id.waydro.Mount.service  meson.build
debian/: changelog  control  rules
docs/: KEY_MAPPING.md  KEY_MAPPING_zh.md
model/: basepropmodel.py  generalcfgmodel.py
po/: LINGUAS  POTFILES  de.po  meson.build  messages.po  ru.po  waydroid-helper.pot  zh_CN.po  zh_CN.po~  zh_TW.po
qml/: DashSwitch.qml  GeneralConfig.qml  WaydroidShell.qml  main.qml
service/: pty.py  shell.py
systemd/: meson.build
systemd/system/: waydroid-mount.service
systemd/user/: waydroid-monitor.service
tools/: app.py  helper.py  prop.py  qmlsocket.py  status.py  system.py
waydroid_helper/: ControllerWindow.py  __init__.py  available_version_page.py  controller.py  extension_row.py  extensionrow.py  extensions_page.py  extensionspage.py  extensionwindow.py  general_page.py  generalpage.py  gpu_combo_row.py  gsf_retriever.py  infobar.py  instance_detail_page.py  main.py  meson.build  model_controller.py  models.py  proppage.py  props_page.py  propspage.py  sdk.py  shared_folder.py  waydroid-cli.in  waydroid-helper.gresource.xml  waydroid-helper.in  waydroid.py  window.py  window.ui
waydroid_helper/app/: README.md  _test.py  client.py  control_msg.py  controller.py  factory.py  gaming_handler_factory.py  input.py  key.md  keyboard_base.py  keyboard_mouse_gaming.py  keyboard_sdk.py  keycodes.py  meson.build  mouse_base.py  mouse_gaming.py  mouse_sdk.py  observer.py  pointer_id.py  sdk_handler_factory.py  server.py  wayland_pointer_lock.c  wayland_pointer_lock.h  wayland_pointer_lock.py
waydroid_helper/app/util/: binary.py
waydroid_helper/app/widgets/: MappingButtonState.py  aim.py  combined_meta.py  directional_pad.py  fire.py  hotkey_editable_widget.py  mapping_button.py  repeated_click.py  resizable.py  shortcut.py  single_click.py
waydroid_helper/compat_widget/: __init__.py  animation_target.py  dialog.py  file_dialog.py  header_bar.py  message_dialog.py  navigation_page.py  navigation_view.py  shared_folder_dialog.py  spinner.py  toolbar_view.py
waydroid_helper/controller/: __init__.py
waydroid_helper/controller/android/: __init__.py  input.py  keycodes.py
waydroid_helper/controller/app/: window.py  workspace_manager.py
waydroid_helper/controller/core/: __init__.py  constants.py  control_msg.py  event_bus.py  key_mapping_manager.py  key_system.py  server.py  types.py  utils.py
waydroid_helper/controller/core/handler/: __init__.py  event_handlers.py  key_mapping_event_handler.py
waydroid_helper/controller/core/handler/default/: __init__.py  default_event_handler.py  default_key_handler.py  default_mouse_handler.py
waydroid_helper/controller/core/handler/mapping/: __init__.py  key_mapping_event_handler.py  key_mapping_manager.py
waydroid_helper/controller/platform/: __init__.py  base.py
waydroid_helper/controller/platform/wayland/: __init__.py  platform.py
waydroid_helper/controller/ui/: __init__.py  menus.py  styles.py
waydroid_helper/controller/widgets/: CONFIG_SYSTEM.md  __init__.py  config.py  factory.py
waydroid_helper/controller/widgets/base/: __init__.py  base_widget.py
waydroid_helper/controller/widgets/components/: __init__.py  aim.py  cancel_casting.py  directional_pad.py  fire.py  macro.py  repeated_click.py  right_click_to_walk.py  single_click.py  skill_casting.py
waydroid_helper/controller/widgets/decorators/: __init__.py  base_decorator.py  editable.py  resizable.py
waydroid_helper/server/: README.md  settings.gradle.kts
waydroid_helper/server/app/: build.gradle.kts
waydroid_helper/server/app/src/main/java/com/rikka/simpleserver/: AudioCodec.java  AudioSource.java  CameraAspectRatio.java  CameraCapture.java  CameraFacing.java  Codec.java  CodecOption.java  CodecUtils.java  Command.java  ConfigurationException.java  Device.java  DisplayInfo.java  FakeContext.java  HandlerExecutor.java  IO.java  KeyComposition.java  Ln.java  LogUtils.java  Main.kt  Options.java  Point.java  Pointer.java  PointersState.java  Position.java  ScreenInfo.java  SettingsException.java  Size.java  SurfaceCapture.java  VideoCodec.java  VideoSource.java  Workarounds.java
waydroid_helper/server/app/src/main/java/com/rikka/simpleserver/wrappers/: ActivityManager.java  ClipboardManager.java  ContentProvider.java  DisplayControl.java  DisplayManager.java  InputManager.java  PowerManager.java  ServiceManager.java  StatusBarManager.java  SurfaceControl.java  WindowManager.java
waydroid_helper/server/gradle/: libs.versions.toml
waydroid_helper/server/gradle/wrapper/: gradle-wrapper.properties
waydroid_helper/tools/: __init__.py  extensions_manager.py  monitor_service.py  mount_service.py
waydroid_helper/ui/: AvailableVersionPage.ui  AvailableVersionPage_old.ui  ExtensionRow.ui  ExtensionsPage.ui  ExtensionsPage_old.ui  GeneralPage.ui  InfoBar.ui  PropPage.ui  PropsPage.ui  window.ui  window_old.ui
waydroid_helper/util/: ExtentionsManager.py  ProcessLauncher.py  SubprocessManager.py  __init__.py  abx_reader.py  adb_helper.py  arch.py  extensions_manager.py  installer.sh  log.py  state_waiter.py  subprocess_manager.py  task.py  template.py  weak_ref.py
(+5 files in other folders)
